feat: add prettier, eslint, husky, and lint-staged setup
- Add prettier with Vue/Nuxt optimized configuration
- Add ESLint with @nuxt/eslint-config for code quality
- Add husky for git hooks management
- Add lint-staged for efficient pre-commit linting
- Configure pre-commit hook to run ESLint and Prettier on staged files
- Add format and lint scripts to both root and app package.json
- Update dependencies and configure monorepo-compatible setup

--- a/app/package.json
+++ b/app/package.json
@@ -10,7 +10,11 @@
     "postinstall": "nuxt prepare",
     "db:create": "wrangler d1 execute tokenly --local --file=./schema.sql",
     "init:local": "./scripts/init-local-db.sh",
-    "db:reset": "wrangler d1 execute tokenly --local --command \"DROP TABLE IF EXISTS _prisma_migrations; DROP TABLE IF EXISTS User;\" && npm run init:local"
+    "db:reset": "wrangler d1 execute tokenly --local --command \"DROP TABLE IF EXISTS _prisma_migrations; DROP TABLE IF EXISTS User;\" && npm run init:local",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@prisma/adapter-d1": "^6.11.1",
