feat: complete Hardhat project setup with proper prettier configuration
- Add Hardhat project with viem (not ethers) support
- Configure TypeScript and Solidity 0.8.28 with optimizer
- Add essential tools: solhint, contract-sizer, coverage, prettier
- Include OpenZeppelin contracts for security
- Set up hybrid env config: .env for URLs, hardhat vars for private keys
- Add automated pre-commit hooks for linting and formatting
- Add pre-push hooks for compilation and testing
- Configure networks: hardhat, localhost, sepolia
- Add deployment scripts and comprehensive npm scripts
- Include example Lock contract and tests
- Fix prettier setup: root for git hooks, workspaces for local dev

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,5 @@
 {
+  "plugins": ["prettier-plugin-solidity"],
   "semi": true,
   "trailingComma": "es5",
   "singleQuote": true,
@@ -9,5 +10,18 @@
   "bracketSameLine": false,
   "arrowParens": "avoid",
   "endOfLine": "lf",
-  "vueIndentScriptAndStyle": false
+  "vueIndentScriptAndStyle": false,
+  "overrides": [
+    {
+      "files": "*.sol",
+      "options": {
+        "printWidth": 80,
+        "tabWidth": 4,
+        "useTabs": false,
+        "singleQuote": false,
+        "bracketSpacing": false,
+        "parser": "solidity-parse"
+      }
+    }
+  ]
 }
