chore: update Solhint to v6.0.0 and fix configuration
- Update Solhint from deprecated version to 6.0.0
- Remove deprecated/non-existent rules: constructor-modifier-order, event-name-camelcase, custom-errors
- Replace with current equivalents: event-name-capwords, gas-custom-errors
- Fix all Solhint configuration warnings and improve linting rules

--- a/contracts/package.json
+++ b/contracts/package.json
@@ -31,26 +31,26 @@
   "license": "MIT",
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.8",
-    "@nomicfoundation/hardhat-viem": "^2.0.6",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.12",
     "@nomicfoundation/hardhat-toolbox-viem": "^3.0.0",
+    "@nomicfoundation/hardhat-viem": "^2.0.6",
     "@typechain/hardhat": "^9.1.0",
     "@types/chai": "^4.3.20",
     "@types/mocha": "^10.0.9",
     "@types/node": "^22.10.1",
     "chai": "^4.3.10",
     "dotenv": "^16.4.7",
-    "viem": "^2.21.45",
     "hardhat": "^2.22.18",
     "hardhat-contract-sizer": "^2.10.0",
     "prettier": "^3.2.5",
     "prettier-plugin-solidity": "^1.4.1",
-    "solhint": "^5.0.4",
+    "solhint": "^6.0.0",
     "solhint-plugin-prettier": "^0.1.0",
     "solidity-coverage": "^0.8.15",
     "ts-node": "^10.9.2",
     "typechain": "^8.3.2",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "viem": "^2.21.45"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.1.0",
