--- a/app/package.json
+++ b/app/package.json
@@ -19,7 +19,17 @@
   "dependencies": {
     "@prisma/adapter-d1": "^6.11.1",
     "@prisma/client": "6.11.1",
+    "@tailwindcss/vite": "^4.1.11",
+    "@vueuse/core": "^13.5.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.525.0",
     "nuxt": "^3.17.6",
+    "reka-ui": "^2.3.2",
+    "shadcn-nuxt": "2.2.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.11",
+    "tw-animate-css": "^1.3.5",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
