--- a/app/package.json
+++ b/app/package.json
@@ -36,10 +36,13 @@
   },
   "devDependencies": {
     "@nuxt/eslint-config": "^1.5.2",
+    "@vue/eslint-config-typescript": "^14.6.0",
     "eslint": "^9.31.0",
     "nitro-cloudflare-dev": "^0.2.2",
     "prettier": "^3.2.5",
     "prisma": "^6.11.1",
+    "sass-embedded": "^1.89.2",
+    "vue-eslint-parser": "^10.2.0",
     "wrangler": "^4.24.3"
   }
 }
