--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
-    "prettier-plugin-solidity": "^1.4.3"
+    "prettier-plugin-solidity": "^1.4.3",
+    "prettier-plugin-tailwindcss": "^0.6.14"
   },
   "lint-staged": {
     "app/**/*.{js,ts,vue}": [
