--- a/app/package.json
+++ b/app/package.json
@@ -40,6 +40,7 @@
     "viem": "^2.31.7",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1",
+    "vue-sonner": "^2.0.2",
     "zod": "^4.0.14"
   },
   "devDependencies": {
