--- a/contracts/package.json
+++ b/contracts/package.json
@@ -7,8 +7,12 @@
     "compile": "hardhat compile",
     "test": "hardhat test",
     "test:coverage": "SOLIDITY_COVERAGE=true hardhat coverage",
-    "deploy:local": "hardhat run scripts/deploy.ts --network localhost",
-    "deploy:sepolia": "hardhat run scripts/deploy.ts --network sepolia",
+    "deploy:factory:local": "hardhat run scripts/deploy/factory.ts --network localhost",
+    "deploy:factory:core-testnet2": "hardhat run scripts/deploy/factory.ts --network coreTestnet2",
+    "deploy:locker:local": "hardhat run scripts/deploy/locker.ts --network localhost",
+    "deploy:locker:core-testnet2": "hardhat run scripts/deploy/locker.ts --network coreTestnet2",
+    "deploy:multisender:local": "hardhat run scripts/deploy/multisender.ts --network localhost",
+    "deploy:multisender:core-testnet2": "hardhat run scripts/deploy/multisender.ts --network coreTestnet2",
     "node": "hardhat node",
     "clean": "hardhat clean",
     "size": "hardhat size-contracts",
@@ -39,7 +43,6 @@
     "@types/mocha": "^10.0.9",
     "@types/node": "^22.10.1",
     "chai": "^4.3.10",
-    "dotenv": "^16.4.7",
     "hardhat": "^2.22.18",
     "hardhat-contract-sizer": "^2.10.0",
     "prettier": "^3.2.5",
