feat: implement deployment registry and streamline deployment scripts
- Added a new deployment registry utility to record contract deployments, including details such as address, deployer, and timestamp.
- Introduced a consolidated deployment script (`all.ts`) to deploy multiple contracts in one go, enhancing deployment efficiency.
- Updated individual deployment scripts for ERC20TokenFactory, ERC20Locker, LockerReader, and Multisender to utilize the new registry for recording deployments.
- Added a new script (`show.ts`) to display the latest deployed contract addresses for the coreTestnet2 network.

--- a/contracts/package.json
+++ b/contracts/package.json
@@ -7,12 +7,11 @@
     "compile": "hardhat compile",
     "test": "hardhat test",
     "test:coverage": "SOLIDITY_COVERAGE=true hardhat coverage",
-    "deploy:factory:local": "hardhat run scripts/deploy/factory.ts --network localhost",
-    "deploy:factory:core-t2": "hardhat run scripts/deploy/factory.ts --network coreTestnet2",
-    "deploy:locker:local": "hardhat run scripts/deploy/locker.ts --network localhost",
-    "deploy:locker:core-t2": "hardhat run scripts/deploy/locker.ts --network coreTestnet2",
-    "deploy:multisender:local": "hardhat run scripts/deploy/multisender.ts --network localhost",
-    "deploy:multisender:core-t2": "hardhat run scripts/deploy/multisender.ts --network coreTestnet2",
+    "d:factory": "hardhat run scripts/deploy/factory.ts --network coreTestnet2",
+    "d:locker": "hardhat run scripts/deploy/locker.ts --network coreTestnet2",
+    "d:multi": "hardhat run scripts/deploy/multisender.ts --network coreTestnet2",
+    "d:all": "hardhat run scripts/deploy/all.ts --network coreTestnet2",
+    "d:show": "hardhat run scripts/deploy/show.ts --network coreTestnet2",
     "node": "hardhat node",
     "clean": "hardhat clean",
     "size": "hardhat size-contracts",
