--- a/app/wrangler.toml
+++ b/app/wrangler.toml
@@ -5,4 +5,19 @@ compatibility_flags = ["nodejs_compat"]
 [[d1_databases]]
 binding = "DB"
 database_name = "tokenly"
-database_id = "d294b04f-e34c-4296-b5cc-d2a0c0171fe3"
+database_id = "955dd8ac-db4a-4555-9c2f-be89a43c7f80"
+
+[vars]
+# WalletConnect / AppKit project ID
+NUXT_PUBLIC_WALLET_CONNECT_PROJECT_ID = "b07c56ffa4adafe96b3cef2f9419ea01"
+
+# Contract addresses (public)
+NUXT_PUBLIC_CORE_MAINNET_FACTORY_ADDRESS = ""
+NUXT_PUBLIC_CORE_MAINNET_MULTISENDER_ADDRESS = ""
+NUXT_PUBLIC_CORE_MAINNET_LOCKER_ADDRESS = ""
+NUXT_PUBLIC_CORE_MAINNET_LOCKER_READER_ADDRESS = ""
+
+NUXT_PUBLIC_CORE_TESTNET2_FACTORY_ADDRESS = "0xa570d6a7310b1d62848a7c64a33d65b208199ebe"
+NUXT_PUBLIC_CORE_TESTNET2_MULTISENDER_ADDRESS = "0xea9fbccae1e3953b109958b3b1d6988e4a23c21b"
+NUXT_PUBLIC_CORE_TESTNET2_LOCKER_ADDRESS = "0x7ac31847515d1ab91917efc69253e5f73603d198"
+NUXT_PUBLIC_CORE_TESTNET2_LOCKER_READER_ADDRESS = "0x5488a484a0e85ed7d0896b33e947b2a03782dd51"
