Increase Node.js memory limit for Cloudflare Workers build process

--- a/.github/workflows/deploy-cloudflare.yml
+++ b/.github/workflows/deploy-cloudflare.yml
@@ -46,6 +46,8 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Build (Nuxt + Nitro for Cloudflare Workers)
+        env:
+          NODE_OPTIONS: --max-old-space-size=6144
         run: pnpm build
 
       - name: Deploy to Cloudflare Workers (production)
