Add coreMainnet configuration and deployment files
- Introduced coreMainnet network configuration in hardhat.config.ts.
- Updated package.json with deployment scripts for coreMainnet.
- Added 1116-coreMainnet.json to track deployments for ERC20TokenFactory, ERC20Locker, LockerReader, and Multisender.

--- a/contracts/package.json
+++ b/contracts/package.json
@@ -12,6 +12,11 @@
     "d:multi": "hardhat run scripts/deploy/multisender.ts --network coreTestnet2",
     "d:all": "hardhat run scripts/deploy/all.ts --network coreTestnet2",
     "d:show": "hardhat run scripts/deploy/show.ts --network coreTestnet2",
+    "d:factory:mainnet": "hardhat run scripts/deploy/factory.ts --network coreMainnet",
+    "d:locker:mainnet": "hardhat run scripts/deploy/locker.ts --network coreMainnet",
+    "d:multi:mainnet": "hardhat run scripts/deploy/multisender.ts --network coreMainnet",
+    "d:all:mainnet": "hardhat run scripts/deploy/all.ts --network coreMainnet",
+    "d:show:mainnet": "hardhat run scripts/deploy/show.ts --network coreMainnet",
     "node": "hardhat node",
     "clean": "hardhat clean",
     "size": "hardhat size-contracts",
