Update mainnet contract addresses in wrangler.toml
- Added contract addresses for coreMainnet factory, multisender, locker, and locker reader in wrangler.toml.

--- a/app/wrangler.toml
+++ b/app/wrangler.toml
@@ -12,10 +12,10 @@ database_id = "955dd8ac-db4a-4555-9c2f-be89a43c7f80"
 NUXT_PUBLIC_WALLET_CONNECT_PROJECT_ID = "b07c56ffa4adafe96b3cef2f9419ea01"
 
 # Contract addresses (public)
-NUXT_PUBLIC_CORE_MAINNET_FACTORY_ADDRESS = ""
-NUXT_PUBLIC_CORE_MAINNET_MULTISENDER_ADDRESS = ""
-NUXT_PUBLIC_CORE_MAINNET_LOCKER_ADDRESS = ""
-NUXT_PUBLIC_CORE_MAINNET_LOCKER_READER_ADDRESS = ""
+NUXT_PUBLIC_CORE_MAINNET_FACTORY_ADDRESS = "0x8e646b49ad209c7d2452c821f1746ebf518c55fe"
+NUXT_PUBLIC_CORE_MAINNET_MULTISENDER_ADDRESS = "0x9b45159cf8e7abe2c35aec259cb76ef34313a261"
+NUXT_PUBLIC_CORE_MAINNET_LOCKER_ADDRESS = "0xd3f7c4c6ce4e7c08c7b63a67a0aaa852ad060edb"
+NUXT_PUBLIC_CORE_MAINNET_LOCKER_READER_ADDRESS = "0x08d9b7b3e80e7154a5fde4d4e76b9fb2257b347b"
 
 NUXT_PUBLIC_CORE_TESTNET2_FACTORY_ADDRESS = "0xa570d6a7310b1d62848a7c64a33d65b208199ebe"
 NUXT_PUBLIC_CORE_TESTNET2_MULTISENDER_ADDRESS = "0xea9fbccae1e3953b109958b3b1d6988e4a23c21b"
